examples/modules/expected/0759-modules-undeclared-type-in-import.stderr
error: unknown type 'Coordnate'
  --> examples/modules/0759-modules-undeclared-type-in-import/lib.sx:7:8
   |
 7 |     y: Coordnate;
   |        ^^^^^^^^^
